# competition_2024

./: .gitignore  Cargo.toml
src/: app.rs  lib.rs  main.rs  shared.rs
src/dock/: dock_screen.rs  mod.rs
src/home/: home_screen.rs  mod.rs  picture_dirs.rs
src/settings/: mod.rs  settings_content.rs  settings_screen.rs  settings_sidebar.rs
